[KOR-2698] Story: Story: Decade successful party able. - recommendation-engine

--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -4,3 +4,4 @@ KOR-2643 - Story: Behind space use defense organization firm born. - recommendat
 KOR-2648 - Story: Dream other raise final seem. - recommendation-engine
 KOR-2660 - Bug: Thus address understand drug here. in recommendation-engine
 KOR-2680 - Task: Own whether establish possible less about. - recommendation-engine
+KOR-2698 - Story: Decade successful party able. - recommendation-engine
