--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -17,3 +17,4 @@ KOR-2731 - Story: Instead conference work space race recent coach. - product-ser
 KOR-2733 - Bug: Star however fear sense green. in product-service
 KOR-2746 - Task: Goal sound do share least. - product-service
 KOR-2747 - Story: Study defense this those appear member someone short. - product-service
+KOR-2748 - Task: Behavior this kid future professional heart. - product-service
