--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -15,3 +15,4 @@ KOR-2662 - Story: Gun pretty blood security line. - cart-service
 KOR-2663 - Story: Say who material technology occur top example. - cart-service
 KOR-2682 - Task: Time major fly catch. - cart-service
 KOR-2683 - Story: Few detail bad stock pattern manager. - cart-service
+KOR-2691 - Epic: Enhanced 3rdgeneration forecast for cart-service
