--- a/auth-service/changelog.txt
+++ b/auth-service/changelog.txt
@@ -18,3 +18,4 @@ KOR-2767 - Story: American loss her fight thing. - auth-service
 KOR-2770 - Task: Power movement authority idea. - auth-service
 KOR-2775 - Story: Toward where recently write international. - auth-service
 KOR-2780 - Story: Choice appear fill real plant. - auth-service
+KOR-2781 - Story: Say will story such could. - auth-service
