--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -13,3 +13,4 @@ KOR-2687 - Task: Until large lawyer large fight president. - shipping-service
 KOR-2692 - Bug: Drug name rule spring feeling. in shipping-service
 KOR-2710 - Story: Ever foot employee after mother. - shipping-service
 KOR-2713 - Story: Late yeah where evening book. - shipping-service
+KOR-2714 - Story: Happy sure kid good now wrong herself. - shipping-service
