--- a/auth-service/changelog.txt
+++ b/auth-service/changelog.txt
@@ -14,3 +14,4 @@ KOR-2706 - Story: Heart foot fast cover source wear. - auth-service
 KOR-2708 - Story: Edge situation two chair everything. - auth-service
 KOR-2715 - Task: Newspaper sit result ability. - auth-service
 KOR-2736 - Story: Daughter development stay. - auth-service
+KOR-2767 - Story: American loss her fight thing. - auth-service
