--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -9,3 +9,4 @@ KOR-2703 - Story: Window position husband second already. - recommendation-engin
 KOR-2718 - Task: Various season morning fact too agreement four say. - recommendation-engine
 KOR-2739 - Story: Decade whole pull audience. - recommendation-engine
 KOR-2740 - Bug: Past speech town away. in recommendation-engine
+KOR-2758 - Story: Week purpose size through officer. - recommendation-engine
