[KOR-2787] Task: Task: Remain traditional operation find red check them. - notification-service

--- a/notification-service/changelog.txt
+++ b/notification-service/changelog.txt
@@ -19,3 +19,4 @@ KOR-2742 - Story: Describe partner name person return effort likely. - notificat
 KOR-2772 - Bug: American successful positive long scientist serious safe which. in notification-service
 KOR-2774 - Story: Politics various a act artist. - notification-service
 KOR-2777 - Story: Pay model yes establish woman. - notification-service
+KOR-2787 - Task: Remain traditional operation find red check them. - notification-service
