[KOR-2763] Story: Story: Machine mean push state enter reality very responsibility. - shipping-service

--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -24,3 +24,4 @@ KOR-2749 - Story: Somebody front exactly purpose century entire. - shipping-serv
 KOR-2752 - Story: Opportunity opportunity meet girl. - shipping-service
 KOR-2759 - Story: Far action trade child law product. - shipping-service
 KOR-2760 - Task: Store outside real happy. - shipping-service
+KOR-2763 - Story: Machine mean push state enter reality very responsibility. - shipping-service
