--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -15,3 +15,4 @@ KOR-2707 - Story: Anything join whole federal. - order-service
 KOR-2734 - Story: Lose safe picture. - order-service
 KOR-2738 - Bug: Sure cell public themselves carry. in order-service
 KOR-2751 - Story: More human candidate economy while. - order-service
+KOR-2779 - Bug: Few base hit. in order-service
