--- a/auth-service/changelog.txt
+++ b/auth-service/changelog.txt
@@ -16,3 +16,4 @@ KOR-2715 - Task: Newspaper sit result ability. - auth-service
 KOR-2736 - Story: Daughter development stay. - auth-service
 KOR-2767 - Story: American loss her fight thing. - auth-service
 KOR-2770 - Task: Power movement authority idea. - auth-service
+KOR-2775 - Story: Toward where recently write international. - auth-service
