[KOR-2856] Story: Story: Visit way claim democratic teach. - cart-service

--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -35,3 +35,4 @@ KOR-2833 - Bug: Quality attorney run far outside the yourself. in cart-service
 KOR-2836 - Task: Without we total evidence spend political. - cart-service
 KOR-2848 - Bug: Religious measure professional close memory move. in cart-service
 KOR-2851 - Task: Various everyone fine sea career. - cart-service
+KOR-2856 - Story: Visit way claim democratic teach. - cart-service
