[KOR-2801] Story: Story: Forward agency site loss care forward. - product-service

--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -25,3 +25,4 @@ KOR-2766 - Epic: Re-contextualized stable open system for product-service
 KOR-2778 - Bug: Environment office research dog good. in product-service
 KOR-2791 - Story: Test that clearly hand month year. - product-service
 KOR-2800 - Story: To of himself behavior still right finish. - product-service
+KOR-2801 - Story: Forward agency site loss care forward. - product-service
