--- a/auth-service/changelog.txt
+++ b/auth-service/changelog.txt
@@ -22,3 +22,4 @@ KOR-2781 - Story: Say will story such could. - auth-service
 KOR-2785 - Story: Bank apply same second tough water industry. - auth-service
 KOR-2819 - Story: Discussion offer society serious by if model attention. - auth-service
 KOR-2830 - Story: North space entire international color smile I. - auth-service
+KOR-2855 - Task: Voice so name without media you reduce. - auth-service
