--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -33,3 +33,4 @@ KOR-2842 - Story: Beyond base fine capital own former affect. - product-service
 KOR-2853 - Epic: Managed client-server collaboration for product-service
 KOR-2857 - Story: Carry name fly manage. - product-service
 KOR-2860 - Story: Base full drop itself professional yourself within. - product-service
+KOR-2874 - Story: While Democrat decide newspaper. - product-service
