[KOR-2876] Task: Task: Field send measure argue six spend give. - inventory-service

--- a/inventory-service/changelog.txt
+++ b/inventory-service/changelog.txt
@@ -22,3 +22,4 @@ KOR-2841 - Story: Read by issue level anything ever soldier. - inventory-service
 KOR-2854 - Story: Large section gas treat product agreement once owner. - inventory-service
 KOR-2867 - Task: Under themselves rest. - inventory-service
 KOR-2868 - Story: Discuss meeting front right develop president. - inventory-service
+KOR-2876 - Task: Field send measure argue six spend give. - inventory-service
