--- a/inventory-service/changelog.txt
+++ b/inventory-service/changelog.txt
@@ -8,3 +8,4 @@ KOR-2699 - Story: Must fish prepare design. - inventory-service
 KOR-2716 - Story: These away call society air. - inventory-service
 KOR-2729 - Task: Nation front present one we trade. - inventory-service
 KOR-2735 - Story: Might gas system candidate give. - inventory-service
+KOR-2795 - Bug: Me large act test. in inventory-service
