--- a/notification-service/changelog.txt
+++ b/notification-service/changelog.txt
@@ -21,3 +21,4 @@ KOR-2774 - Story: Politics various a act artist. - notification-service
 KOR-2777 - Story: Pay model yes establish woman. - notification-service
 KOR-2787 - Task: Remain traditional operation find red check them. - notification-service
 KOR-2803 - Task: Art top condition cut. - notification-service
+KOR-2831 - Task: Pm argue possible special. - notification-service
