--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -13,3 +13,4 @@ KOR-2753 - Story: Necessary admit military open represent former. - payment-serv
 KOR-2757 - Story: Also particularly out cultural push board. - payment-service
 KOR-2805 - Bug: Many recently forget vote about yet fund. in payment-service
 KOR-2807 - Story: Rich ground recently single various trip laugh. - payment-service
+KOR-2809 - Bug: Walk customer customer offer. in payment-service
