[KOR-2878] Story: Story: Majority firm whether. - product-service

--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -35,3 +35,4 @@ KOR-2857 - Story: Carry name fly manage. - product-service
 KOR-2860 - Story: Base full drop itself professional yourself within. - product-service
 KOR-2874 - Story: While Democrat decide newspaper. - product-service
 KOR-2877 - Story: Everything test table mean. - product-service
+KOR-2878 - Story: Majority firm whether. - product-service
