--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -29,3 +29,4 @@ KOR-2786 - Epic: Ergonomic impactful hierarchy for shipping-service
 KOR-2820 - Story: Agree campaign media when everything. - shipping-service
 KOR-2840 - Story: Information while so hospital rest paper. - shipping-service
 KOR-2847 - Story: Audience bank high unit statement. - shipping-service
+KOR-2884 - Task: Official situation far street. - shipping-service
