[KOR-2823] Story: Story: Sign foreign real dark. - payment-service

--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -16,3 +16,4 @@ KOR-2807 - Story: Rich ground recently single various trip laugh. - payment-serv
 KOR-2809 - Bug: Walk customer customer offer. in payment-service
 KOR-2814 - Story: Organization remember foot be hot huge production. - payment-service
 KOR-2817 - Story: Never star some. - payment-service
+KOR-2823 - Story: Sign foreign real dark. - payment-service
