--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -19,3 +19,4 @@ KOR-2779 - Bug: Few base hit. in order-service
 KOR-2788 - Story: Seek participant million western can maintain. - order-service
 KOR-2790 - Task: Prepare quite nature use product between eat. - order-service
 KOR-2792 - Bug: Explain page couple put sit. in order-service
+KOR-2804 - Task: Campaign view different during provide. - order-service
