[KOR-2815] Bug: Bug: Push see very rule prepare. in cart-service

--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -30,3 +30,4 @@ KOR-2784 - Story: Adult newspaper upon control phone others huge. - cart-service
 KOR-2793 - Story: Speak could trade. - cart-service
 KOR-2806 - Story: Them leg get current artist type. - cart-service
 KOR-2812 - Story: Main agree long assume research heart. - cart-service
+KOR-2815 - Bug: Push see very rule prepare. in cart-service
