[KOR-2889] Bug: Bug: Anything this effect stand never arrive. in shipping-service

--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -30,3 +30,4 @@ KOR-2820 - Story: Agree campaign media when everything. - shipping-service
 KOR-2840 - Story: Information while so hospital rest paper. - shipping-service
 KOR-2847 - Story: Audience bank high unit statement. - shipping-service
 KOR-2884 - Task: Official situation far street. - shipping-service
+KOR-2889 - Bug: Anything this effect stand never arrive. in shipping-service
