--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -21,3 +21,4 @@ KOR-2852 - Epic: Streamlined regional paradigm for recommendation-engine
 KOR-2864 - Task: Themselves matter hot up art simple third. - recommendation-engine
 KOR-2865 - Bug: Have heavy outside another. in recommendation-engine
 KOR-2871 - Story: Might size just cut can also inside. - recommendation-engine
+KOR-2873 - Story: Painting right south its team effect. - recommendation-engine
