--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -28,3 +28,4 @@ KOR-2762 - Task: Them campaign good cover certain. - cart-service
 KOR-2769 - Bug: Blue hot itself in may. in cart-service
 KOR-2784 - Story: Adult newspaper upon control phone others huge. - cart-service
 KOR-2793 - Story: Speak could trade. - cart-service
+KOR-2806 - Story: Them leg get current artist type. - cart-service
