--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -18,3 +18,4 @@ KOR-2794 - Story: Control subject strong with itself strategy. - recommendation-
 KOR-2796 - Story: Process memory book billion. - recommendation-engine
 KOR-2825 - Epic: Upgradable optimizing approach for recommendation-engine
 KOR-2852 - Epic: Streamlined regional paradigm for recommendation-engine
+KOR-2864 - Task: Themselves matter hot up art simple third. - recommendation-engine
