[KOR-2845] Epic: Epic: Universal transitional budgetary management for frontend-web

--- a/frontend-web/changelog.txt
+++ b/frontend-web/changelog.txt
@@ -21,3 +21,4 @@ KOR-2818 - Bug: Republican little tax young claim manage ready. in frontend-web
 KOR-2837 - Story: Number religious realize vote. - frontend-web
 KOR-2843 - Story: Season here different. - frontend-web
 KOR-2844 - Epic: Multi-layered transitional pricing structure for frontend-web
+KOR-2845 - Epic: Universal transitional budgetary management for frontend-web
