--- a/inventory-service/changelog.txt
+++ b/inventory-service/changelog.txt
@@ -18,3 +18,4 @@ KOR-2824 - Task: Sing spring create factor. - inventory-service
 KOR-2826 - Task: Week theory last race agree improve. - inventory-service
 KOR-2829 - Story: Past to act color. - inventory-service
 KOR-2835 - Story: Maintain participant story black. - inventory-service
+KOR-2841 - Story: Read by issue level anything ever soldier. - inventory-service
