--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -26,3 +26,4 @@ KOR-2759 - Story: Far action trade child law product. - shipping-service
 KOR-2760 - Task: Store outside real happy. - shipping-service
 KOR-2763 - Story: Machine mean push state enter reality very responsibility. - shipping-service
 KOR-2786 - Epic: Ergonomic impactful hierarchy for shipping-service
+KOR-2820 - Story: Agree campaign media when everything. - shipping-service
