--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -36,3 +36,4 @@ KOR-2860 - Story: Base full drop itself professional yourself within. - product-
 KOR-2874 - Story: While Democrat decide newspaper. - product-service
 KOR-2877 - Story: Everything test table mean. - product-service
 KOR-2878 - Story: Majority firm whether. - product-service
+KOR-2881 - Story: Note green choice play forward subject. - product-service
