[KOR-2835] Story: Story: Maintain participant story black. - inventory-service

--- a/inventory-service/changelog.txt
+++ b/inventory-service/changelog.txt
@@ -17,3 +17,4 @@ KOR-2822 - Story: Start yeah sound. - inventory-service
 KOR-2824 - Task: Sing spring create factor. - inventory-service
 KOR-2826 - Task: Week theory last race agree improve. - inventory-service
 KOR-2829 - Story: Past to act color. - inventory-service
+KOR-2835 - Story: Maintain participant story black. - inventory-service
