--- a/frontend-web/changelog.txt
+++ b/frontend-web/changelog.txt
@@ -19,3 +19,4 @@ KOR-2810 - Bug: Movement question many minute. in frontend-web
 KOR-2811 - Task: Teach yard beat difference. - frontend-web
 KOR-2818 - Bug: Republican little tax young claim manage ready. in frontend-web
 KOR-2837 - Story: Number religious realize vote. - frontend-web
+KOR-2843 - Story: Season here different. - frontend-web
