--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -17,3 +17,4 @@ KOR-2789 - Story: Evidence up build visit. - recommendation-engine
 KOR-2794 - Story: Control subject strong with itself strategy. - recommendation-engine
 KOR-2796 - Story: Process memory book billion. - recommendation-engine
 KOR-2825 - Epic: Upgradable optimizing approach for recommendation-engine
+KOR-2852 - Epic: Streamlined regional paradigm for recommendation-engine
