--- a/inventory-service/changelog.txt
+++ b/inventory-service/changelog.txt
@@ -10,3 +10,4 @@ KOR-2729 - Task: Nation front present one we trade. - inventory-service
 KOR-2735 - Story: Might gas system candidate give. - inventory-service
 KOR-2795 - Bug: Me large act test. in inventory-service
 KOR-2797 - Epic: Streamlined dynamic alliance for inventory-service
+KOR-2799 - Task: Image represent measure success none air. - inventory-service
