--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -14,3 +14,4 @@ KOR-2768 - Story: Responsibility film two. - recommendation-engine
 KOR-2773 - Story: Front evening significant fact world order. - recommendation-engine
 KOR-2783 - Bug: Sea feel clear build. in recommendation-engine
 KOR-2789 - Story: Evidence up build visit. - recommendation-engine
+KOR-2794 - Story: Control subject strong with itself strategy. - recommendation-engine
