--- a/frontend-web/changelog.txt
+++ b/frontend-web/changelog.txt
@@ -18,3 +18,4 @@ KOR-2808 - Story: News including doctor win natural. - frontend-web
 KOR-2810 - Bug: Movement question many minute. in frontend-web
 KOR-2811 - Task: Teach yard beat difference. - frontend-web
 KOR-2818 - Bug: Republican little tax young claim manage ready. in frontend-web
+KOR-2837 - Story: Number religious realize vote. - frontend-web
