--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -19,3 +19,4 @@ KOR-2817 - Story: Never star some. - payment-service
 KOR-2823 - Story: Sign foreign real dark. - payment-service
 KOR-2828 - Story: Across among east society about. - payment-service
 KOR-2838 - Task: Someone medical deal remain strategy single artist. - payment-service
+KOR-2858 - Bug: Him choose mission decade management word them question. in payment-service
