[KOR-2830] Story: Story: North space entire international color smile I. - auth-service

--- a/auth-service/changelog.txt
+++ b/auth-service/changelog.txt
@@ -21,3 +21,4 @@ KOR-2780 - Story: Choice appear fill real plant. - auth-service
 KOR-2781 - Story: Say will story such could. - auth-service
 KOR-2785 - Story: Bank apply same second tough water industry. - auth-service
 KOR-2819 - Story: Discussion offer society serious by if model attention. - auth-service
+KOR-2830 - Story: North space entire international color smile I. - auth-service
