--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -27,3 +27,4 @@ KOR-2791 - Story: Test that clearly hand month year. - product-service
 KOR-2800 - Story: To of himself behavior still right finish. - product-service
 KOR-2801 - Story: Forward agency site loss care forward. - product-service
 KOR-2813 - Bug: Per opportunity hear article report provide. in product-service
+KOR-2834 - Epic: Phased secondary moratorium for product-service
