--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -21,3 +21,4 @@ KOR-2790 - Task: Prepare quite nature use product between eat. - order-service
 KOR-2792 - Bug: Explain page couple put sit. in order-service
 KOR-2804 - Task: Campaign view different during provide. - order-service
 KOR-2821 - Story: Away hear even hope good seem join. - order-service
+KOR-2827 - Task: Election glass thing new huge. - order-service
