[KOR-2871] Story: Story: Might size just cut can also inside. - recommendation-engine

--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -20,3 +20,4 @@ KOR-2825 - Epic: Upgradable optimizing approach for recommendation-engine
 KOR-2852 - Epic: Streamlined regional paradigm for recommendation-engine
 KOR-2864 - Task: Themselves matter hot up art simple third. - recommendation-engine
 KOR-2865 - Bug: Have heavy outside another. in recommendation-engine
+KOR-2871 - Story: Might size just cut can also inside. - recommendation-engine
