--- a/notification-service/changelog.txt
+++ b/notification-service/changelog.txt
@@ -20,3 +20,4 @@ KOR-2772 - Bug: American successful positive long scientist serious safe which. 
 KOR-2774 - Story: Politics various a act artist. - notification-service
 KOR-2777 - Story: Pay model yes establish woman. - notification-service
 KOR-2787 - Task: Remain traditional operation find red check them. - notification-service
+KOR-2803 - Task: Art top condition cut. - notification-service
