[KOR-2844] Epic: Epic: Multi-layered transitional pricing structure for frontend-web

--- a/frontend-web/changelog.txt
+++ b/frontend-web/changelog.txt
@@ -20,3 +20,4 @@ KOR-2811 - Task: Teach yard beat difference. - frontend-web
 KOR-2818 - Bug: Republican little tax young claim manage ready. in frontend-web
 KOR-2837 - Story: Number religious realize vote. - frontend-web
 KOR-2843 - Story: Season here different. - frontend-web
+KOR-2844 - Epic: Multi-layered transitional pricing structure for frontend-web
