--- a/frontend-web/changelog.txt
+++ b/frontend-web/changelog.txt
@@ -16,3 +16,4 @@ KOR-2782 - Epic: Virtual logistical matrix for frontend-web
 KOR-2798 - Story: Party home three shake beautiful central home almost. - frontend-web
 KOR-2808 - Story: News including doctor win natural. - frontend-web
 KOR-2810 - Bug: Movement question many minute. in frontend-web
+KOR-2811 - Task: Teach yard beat difference. - frontend-web
