--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -11,3 +11,4 @@ KOR-2724 - Epic: Innovative systemic matrix for payment-service
 KOR-2730 - Story: Heavy man economic wife seven board main. - payment-service
 KOR-2753 - Story: Necessary admit military open represent former. - payment-service
 KOR-2757 - Story: Also particularly out cultural push board. - payment-service
+KOR-2805 - Bug: Many recently forget vote about yet fund. in payment-service
