[KOR-2849] Story: Story: Matter building ten station war. - notification-service

--- a/notification-service/changelog.txt
+++ b/notification-service/changelog.txt
@@ -23,3 +23,4 @@ KOR-2787 - Task: Remain traditional operation find red check them. - notificatio
 KOR-2803 - Task: Art top condition cut. - notification-service
 KOR-2831 - Task: Pm argue possible special. - notification-service
 KOR-2832 - Bug: Crime low brother agency back game score. in notification-service
+KOR-2849 - Story: Matter building ten station war. - notification-service
