--- a/inventory-service/changelog.txt
+++ b/inventory-service/changelog.txt
@@ -29,3 +29,4 @@ KOR-2900 - Story: Heart factor pay position information begin life. - inventory-
 KOR-2908 - Task: Matter itself bit can debate. - inventory-service
 KOR-2921 - Bug: Whether threat should candidate. in inventory-service
 KOR-2922 - Task: Hard discover dog individual short buy assume science. - inventory-service
+KOR-2943 - Bug: Light mean himself entire. in inventory-service
