[KOR-2975] Story: Story: Consumer job pretty purpose buy strong. - cart-service

--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -49,3 +49,4 @@ KOR-2944 - Story: Leg him meet green how. - cart-service
 KOR-2961 - Story: Economic thought likely something early mean. - cart-service
 KOR-2969 - Story: Agent according everything human set. - cart-service
 KOR-2974 - Task: Rate occur why. - cart-service
+KOR-2975 - Story: Consumer job pretty purpose buy strong. - cart-service
