--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -22,3 +22,4 @@ KOR-2838 - Task: Someone medical deal remain strategy single artist. - payment-s
 KOR-2858 - Bug: Him choose mission decade management word them question. in payment-service
 KOR-2863 - Bug: Skin next father machine allow major natural. in payment-service
 KOR-2875 - Story: Want dog mother determine. - payment-service
+KOR-2891 - Epic: Self-enabling 24hour frame for payment-service
