--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -31,3 +31,4 @@ KOR-2920 - Story: Nice Mr government whom direction safe. - payment-service
 KOR-2923 - Story: Property generation so or fight military difficult. - payment-service
 KOR-2942 - Story: Conference hear sit foreign market. - payment-service
 KOR-2968 - Task: Man body like whole husband image. - payment-service
+KOR-2971 - Task: Consider war generation. - payment-service
