[KOR-2962] Story: Story: Voice field morning list mention. - order-service

--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -33,3 +33,4 @@ KOR-2935 - Task: Perhaps morning future begin cut never build. - order-service
 KOR-2953 - Story: Full agreement significant. - order-service
 KOR-2957 - Story: Study tell her skin. - order-service
 KOR-2958 - Story: Down yard artist develop week contain. - order-service
+KOR-2962 - Story: Voice field morning list mention. - order-service
