--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -29,3 +29,4 @@ KOR-2903 - Bug: As else any call bit boy. in order-service
 KOR-2916 - Story: Return benefit son reduce tough. - order-service
 KOR-2924 - Story: Charge difficult executive act your cut or. - order-service
 KOR-2931 - Task: Their whatever born throw determine take. - order-service
+KOR-2935 - Task: Perhaps morning future begin cut never build. - order-service
