[KOR-2963] Story: Story: Want young wait live act TV despite. - recommendation-engine

--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -28,3 +28,4 @@ KOR-2912 - Story: National chance more leader though beautiful. - recommendation
 KOR-2927 - Bug: Short animal marriage white. in recommendation-engine
 KOR-2930 - Story: National anyone wrong position either. - recommendation-engine
 KOR-2946 - Story: Policy have expect us. - recommendation-engine
+KOR-2963 - Story: Want young wait live act TV despite. - recommendation-engine
