--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -40,3 +40,4 @@ KOR-2936 - Epic: Cross-group optimizing projection for shipping-service
 KOR-2947 - Task: Of add on morning forward which step room. - shipping-service
 KOR-2950 - Story: Your morning building show. - shipping-service
 KOR-2952 - Task: Itself look house stand whose mouth. - shipping-service
+KOR-2965 - Story: Nation during car so probably. - shipping-service
