[KOR-2936] Epic: Epic: Cross-group optimizing projection for shipping-service

--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -36,3 +36,4 @@ KOR-2907 - Bug: Mean improve turn writer door whom final. in shipping-service
 KOR-2918 - Story: Floor glass red. - shipping-service
 KOR-2928 - Epic: Expanded local access for shipping-service
 KOR-2933 - Task: Main eye among suggest affect. - shipping-service
+KOR-2936 - Epic: Cross-group optimizing projection for shipping-service
