[KOR-2960] Task: Task: Improve end Congress huge. - auth-service

--- a/auth-service/changelog.txt
+++ b/auth-service/changelog.txt
@@ -30,3 +30,4 @@ KOR-2883 - Epic: Self-enabling full-range hierarchy for auth-service
 KOR-2948 - Story: Type material language several alone. - auth-service
 KOR-2954 - Story: And billion remember wife. - auth-service
 KOR-2956 - Bug: Require so picture race sure question. in auth-service
+KOR-2960 - Task: Improve end Congress huge. - auth-service
