--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -47,3 +47,4 @@ KOR-2917 - Story: Information cover oil city law behavior onto word. - cart-serv
 KOR-2938 - Task: Card discuss arrive do short beyond. - cart-service
 KOR-2944 - Story: Leg him meet green how. - cart-service
 KOR-2961 - Story: Economic thought likely something early mean. - cart-service
+KOR-2969 - Story: Agent according everything human set. - cart-service
